<resources>
    <string name="app_name" translatable="false">USB Toolkit</string>
    <string name="add">Add</string>
    <string name="read_only">Read-Only</string>
    <string name="cd_rom" translatable="false">CD-ROM</string>
    <string name="removable">Removable</string>
    <string name="root">Root</string>
    <string name="home">Home</string>
    <string name="no_files_found">No files found</string>
    <string name="loading">Loading…</string>
    <string name="read_only_desc">Mount files as immutable read only disks</string>
    <string name="cd_rom_desc">Mount files as CD-ROM disks</string>
    <string name="removable_desc">Mount files as removable disks</string>
    <string name="udc" translatable="false">UDC</string>
    <string name="udc_desc">Set USB Device Controller to bind gadget to it</string>
    <string name="gadgets">Gadgets</string>
    <string name="settings">Settings</string>
    <string name="files">Files</string>
    <string name="activity_gadget_details">Gadget Info</string>
    <string name="status">Status</string>
    <string name="bound_udc">Bound UDC</string>
    <string name="device">Device</string>
    <string name="vendor_id">Vendor Id</string>
    <string name="product_id">Product Id</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="product">Product</string>
    <string name="serial_number">Serial Number</string>
    <string name="usb" translatable="false">USB</string>
    <string name="usb_bm_attributes">Flags</string>
    <string name="usb_version">USB Version</string>
    <string name="device_version">Device Version</string>
    <string name="activity_file_picker">Select Files</string>
    <string name="confirm">Confirm</string>
    <string name="bound">Bound</string>
    <string name="not_bound">Not Bound</string>
    <string name="processing">Processing</string>
    <string name="op_success">Operation completed successfully</string>
    <string name="error_binder_lost">Connection to the root service is lost, you must restart the app.</string>
    <string name="error_root_required">This app needs root access to work.</string>
    <string name="error">Error</string>
    <string name="exit">Exit</string>
    <string name="error_step" translatable="false">Error occurred on step: %1$s - %2$s</string>
    <string name="ok">OK</string>
    <string name="error_no_file">At least one file required</string>
    <string name="error_no_udc">No UDC is found.</string>
    <string name="error_no_configfs">ConfigFS either not supported or not mounted.</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="binder_waiting">Waiting for Root Service</string>
    <string name="initializing">Initializing</string>
    <string name="error_no_binder">Root service not connected</string>
    <string name="error_binder" translatable="false">IPC error: %1$s</string>
    <string name="n_file_selected">%1$d File Selected</string>
    <string name="reboot">Reboot</string>
</resources>