<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="?attr/colorSurfaceContainer">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorSurfaceContainer"
        app:title="@string/activity_gadget_details"
        app:titleCentered="false"
        app:navigationIcon="@drawable/ic_arrow_back"
        app:navigationIconTint="?attr/colorOnSurface"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="@dimen/gap_xlarge">

            <ir.aeliux.usbtoolkit.widget.MaterialContainer
                android:id="@+id/sec_udc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:headerText="@string/udc">

                <ir.aeliux.usbtoolkit.widget.MaterialItem
                    android:id="@+id/info_bound"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:itemTitle="@string/status"
                    app:attachMasterListener="false" />
                <ir.aeliux.usbtoolkit.widget.MaterialItem
                    android:id="@+id/info_bound_udc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:itemTitle="@string/bound_udc"
                    app:attachMasterListener="false" />
            </ir.aeliux.usbtoolkit.widget.MaterialContainer>

            <ir.aeliux.usbtoolkit.widget.MaterialContainer
                android:id="@+id/sec_device"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:headerText="@string/device">

                <ir.aeliux.usbtoolkit.widget.MaterialItem
                    android:id="@+id/info_vendor_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:itemTitle="@string/vendor_id"
                    app:attachMasterListener="false" />
                <ir.aeliux.usbtoolkit.widget.MaterialItem
                    android:id="@+id/info_product_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:itemTitle="@string/product_id"
                    app:attachMasterListener="false" />
                <ir.aeliux.usbtoolkit.widget.MaterialItem
                    android:id="@+id/info_manufacturer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:itemTitle="@string/manufacturer"
                    app:attachMasterListener="false" />
                <ir.aeliux.usbtoolkit.widget.MaterialItem
                    android:id="@+id/info_product"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:itemTitle="@string/product"
                    app:attachMasterListener="false" />
                <ir.aeliux.usbtoolkit.widget.MaterialItem
                    android:id="@+id/info_serial_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:itemTitle="@string/serial_number"
                    app:attachMasterListener="false" />
            </ir.aeliux.usbtoolkit.widget.MaterialContainer>

            <ir.aeliux.usbtoolkit.widget.MaterialContainer
                android:id="@+id/sec_usb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:headerText="@string/usb">

                <ir.aeliux.usbtoolkit.widget.MaterialItem
                    android:id="@+id/info_bm_attributes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:itemTitle="@string/flags"
                    app:attachMasterListener="false" />
                <ir.aeliux.usbtoolkit.widget.MaterialItem
                    android:id="@+id/info_bcd_usb"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:itemTitle="@string/usb_version"
                    app:attachMasterListener="false" />
                <ir.aeliux.usbtoolkit.widget.MaterialItem
                    android:id="@+id/info_bcd_device"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:itemTitle="@string/device_version"
                    app:attachMasterListener="false" />
            </ir.aeliux.usbtoolkit.widget.MaterialContainer>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>