<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurfaceContainer">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorSurfaceContainer"
        app:title="@string/activity_file_picker"
        app:titleCentered="false"
        app:navigationIcon="@drawable/ic_arrow_back"
        app:navigationIconTint="?attr/colorOnSurface"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/action_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/confirm"
        app:icon="@drawable/ic_check"
        android:layout_margin="@dimen/gap_xlarge" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnUp"
        style="@style/Widget.Material3.Button.IconButton.Filled.Tonal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/gap_large"
        android:layout_marginTop="@dimen/gap_large"
        app:icon="@drawable/ic_arrow_up"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnRoot"
        style="@style/Widget.Material3.Button.TonalButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/gap_large"
        android:layout_marginTop="@dimen/gap_large"
        android:text="@string/root"
        app:icon="@drawable/ic_shield"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnHome"
        style="@style/Widget.Material3.Button.TonalButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/gap_large"
        android:layout_marginTop="@dimen/gap_large"
        android:text="@string/home"
        app:icon="@drawable/ic_home"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintEnd_toStartOf="@id/btnRoot" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerFiles"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:layout_marginTop="@dimen/gap_large"
        android:paddingBottom="@dimen/gap_medium"
        app:layout_constraintTop_toBottomOf="@id/btnUp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone"
        app:trackThickness="3dp"
        app:wavelength="3dp"
        app:layout_constraintTop_toTopOf="@id/recyclerFiles"
        app:layout_constraintBottom_toBottomOf="@id/recyclerFiles"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvEmpty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_files_found"
        android:textColor="?attr/colorOnSurfaceVariant"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="@id/recyclerFiles"
        app:layout_constraintBottom_toBottomOf="@id/recyclerFiles"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>